--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+./src/apiKeys.js
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-apikeys.js
