--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-./src/apiKeys.js
+/src/apiKeys.js
 
 npm-debug.log*
 yarn-debug.log*
