--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "dom-to-image": "^2.6.0",
+    "filestack-js": "^0.11.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-filestack": "^0.9.7",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
