chartjs for emotionstats microsoft face api

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.2",
     "dom-to-image": "^2.6.0",
     "filestack-js": "^0.11.4",
     "react": "^16.3.2",
+    "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
     "react-filestack": "^0.9.7",
     "react-redux": "^5.0.7",
