--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.4.5",
     "chart.js": "^2.7.2",
     "dom-to-image": "^2.6.0",
     "filestack-js": "^0.11.4",
