--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
+  "engines": {
+    "node": "7.8.0",
+    "npm": "4.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
